--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,34 @@
-name: Build macOS Binary
+name: Build TMalign_tools for macOS
 
 on:
   push:
-    branches: [ "main" ]  # 触发条件：推送到 main 分支时运行
+    branches: [ "main" ]  # 触发分支
   pull_request:
-    branches: [ "main" ]  # 或 PR 到 main 分支时运行
-  workflow_dispatch:      # 允许手动触发
+    branches: [ "main" ]
 
 jobs:
-  build-macos:
-    runs-on: macos-latest  # 使用 GitHub 提供的 macOS 最新版本环境
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # 拉取代码
+        uses: actions/checkout@v4
 
-      - name: Install dependencies (if any)
-        run: |
-          brew update  # 可选：安装依赖（如需要）
-          # brew install some-package
-
-      - name: Compile TMalign_tools.cpp
-        run: |
-          clang++ -std=c++11 -O3 -o TMalign_tools TMalign_tools.cpp
-
-      - name: Upload macOS binary
-        uses: actions/upload-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: TMalign_tools-macOS  # 生成的二进制文件名
-          path: TMalign_tools         # 上传编译后的文件
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: pip install pybind11
+
+      - name: Compile
+        run: |
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            cl -O2 -EHsc -MD -LD -I$(python -m pybind11 --includes) TMalign_tools.cpp -FeTMalign_tools.pyd
+          else
+            c++ -O3 -Wall -shared -std=c++11 -fPIC $(python3 -m pybind11 --includes) TMalign_tools.cpp -o TMalign_tools$(python3-config --extension-suffix)
+          fi
