--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Compile TMalign_tools.cpp
         run: |
-          c++ -O3 -Wall -shared -std=c++11 -fPIC $(python3 -m pybind11 --includes) TMalign_tools.cpp -o TMalign_tools$(python3-config --extension-suffix)
+          c++ -O3 -Wall -shared -std=c++11 -undefined dynamic_lookup $(python3 -m pybind11 --includes) TMalign_tools.cpp -o TMalign_tools$(python3-config --extension-suffix)
 
       - name: Upload artifact (可选)
         uses: actions/upload-artifact@v4
